@@ -3,6 +3,17 @@
     "tests" : [
         {
             "filename" : "main.cpp"
+        },
+        {
+            "filename" : "fixit.cpp",
+            "has_fixits" : true,
+            "minimum_clang_version" : 1100
+        },
+        {
+            "filename" : "file.hh",
+            "has_fixits" : true,
+            "minimum_clang_version" : 1100
         }
+
     ]
 }
