@@ -1,0 +1,11 @@
+#ifndef FILE_H
+#define FILE_H
+
+#include <QtCore/QObject>
+
+class MissingMacro : public QObject
+{
+public: // Warning
+};
+
+#endif // FILE_H
