@@ -1,0 +1,12 @@
+#ifndef FILE_H
+#define FILE_H
+
+#include <QtCore/QObject>
+
+class MissingMacro : public QObject
+{
+    Q_OBJECT
+public: // Warning
+};
+
+#endif // FILE_H
