@@ -137,3 +137,4 @@
       - qt6-qhash-signature
       - use-chrono-in-qtimer
       - qt6-qdir-fixes
+      - fixit for missing-qobject-macro
